almost ready to work on

--- a/styles.qss
+++ b/styles.qss
@@ -35,3 +35,21 @@ QLineEdit.puzzle_input {
     border: 1px solid #eee;
     font-size: 22px;
 }
+
+QPushButton#submit_button {
+    background: #55bb88;
+    border-radius: 8px;
+    border: 0;
+    color: white;
+    font-size: 22px;
+}
+
+QPushButton#submit_button:hover {
+    border: 2px solid #339955;
+}
+
+QPushButton#submit_button:pressed {
+    border: 1px solid #339955;
+    border-bottom: 1px solid #55bb88;
+    border-top: 3px solid #339955;
+}
